re-fixed image background not showing issue

--- a/damoke.css
+++ b/damoke.css
@@ -115,9 +115,9 @@ header {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
+    -o-background-attachement: fixed;
+    -moz-background-attachement: fixed;
+    -webkit-background-attachement: fixed;
 }
 
 .services {
@@ -273,7 +273,6 @@ header {
     position: relative;
     background-attachment: fixed;
     object-fit: cover;
-    background-repeat: no-repeat;
 }
 
 .contact-us-text h1, .address-title h1 {
